[package]
name = "connect4xyz"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.20"
web-sys = { version = "0.3.64", features = ['History'] }
nanoid = "0.4.0"
getrandom = { version = "0.2.10", features = ["js"] }

# You only need serde if you want app persistence:
serde = { version = "1.0.188", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"


[profile.release]
opt-level = 2
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
